deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-api-service
  namespace: app
#  annotations:
#    alb.ingress.kubernetes.io/healthcheck-path: "/api/1/check/"
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: backend-api
